[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["sanchez005909 <sanchez005909@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.10"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
